# search-products-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: deps.py
app/api/routes/: index.py  search.py
app/core/: bm25.py  inverted_index.py  preprocessor.py  search_engine.py
app/data/: cleaner.py  loader.py  schema_mapper.py
app/models/: document.py  index.py  search.py
app/storage/: base.py  disk_store.py  memory_store.py
scripts/: bulk_index.py
